# baxter_whill_movement

./: CMakeLists.txt  README.md  package.xml
launch/: mrd_player.launch
scripts/: mrd_player.py
